--- a/.drone.yml
+++ b/.drone.yml
@@ -9,19 +9,26 @@ trigger:
 
 
 steps:
-  # Server Database
-  - name: database_server
+  # docker image build
+  - name: set_server
+    image: plugins/docker
+    settings:
+      dockerfile: ./Source/Dockerfile
+      context: Source
+      registry: hub.codefirst.iut.uca.fr
+      repo: hub.codefirst.iut.uca.fr/dorian.hodin/socketioservergames
+      username:
+        from_secret: SECRET_USERNAME
+      password:
+        from_secret: SECRET_PASSWD
+
+  # container deployment
+  - name: deploy_api
     image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
     environment:
-      IMAGENAME: mariadb:10.5
-      CONTAINERNAME: database_server
+      IMAGENAME: hub.codefirst.iut.uca.fr/dorian.hodin/socketioservergames:latest
+      CONTAINERNAME: deploy_server
       COMMAND: create
-      CODEFIRST_CLIENTDRONE_ENV_MARIADB_ROOT_PASSWORD:
-        from_secret: db_root_password
-      CODEFIRST_CLIENTDRONE_ENV_MARIADB_DATABASE:
-        from_secret: db_database
-      CODEFIRST_CLIENTDRONE_ENV_MARIADB_USER:
-        from_secret: db_user
-      CODEFIRST_CLIENTDRONE_ENV_MARIADB_PASSWORD:
-        from_secret: db_password
+      OVERWRITE: true
       ADMINS: dorianhodin,corentinrichard,jeremybesson,joanpierron,baptistemarcel
+    depends_on: [ set_server ]
