Add deploy of server 5

--- a/Source/Dockerfile
+++ b/Source/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:14
 WORKDIR ./server
-RUN ls
-COPY package.json ./
+COPY ./server .
+RUN ls -l && echo "serevr"
+COPY package.json .
 RUN npm install
-COPY . .
 EXPOSE 3000
 ENTRYPOINT [ "npm", "run" , "dev" ]
