--- a/Source/Dockerfile
+++ b/Source/Dockerfile
@@ -2,4 +2,4 @@ FROM node:14
 COPY ./server /var/www/html
 RUN npm install
 EXPOSE 80
-ENTRYPOINT [ "npm", "run" , "dev" ]
+CMD [ "npm", "run" , "dev" ]
