Try to run Server on CodeFirst

--- a/Source/Dockerfile
+++ b/Source/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14
 COPY ./server /var/www/html
-RUN ls /var/www/html
-RUN npm install
+WORKDIR /var/www/html
+RUN ls
+RUN npm install /var/www/html/package.json
 EXPOSE 80
 CMD [ "npm", "run" , "dev" ]
