--- a/Source/Dockerfile
+++ b/Source/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:14
 COPY ./server /var/www/html
 WORKDIR /var/www/html
-RUN ls
-RUN npm install /var/www/html/package.json
+RUN npm install
 EXPOSE 80
 CMD [ "npm", "run" , "dev" ]
