--- a/Source/Dockerfile
+++ b/Source/Dockerfile
@@ -3,4 +3,4 @@ COPY ./server /var/www/html
 WORKDIR /var/www/html
 RUN npm install
 EXPOSE 80
-CMD [ "npm", "run" , "dev" ]
+ENTRYPOINT [ "npm", "run" , "dev" ]
