--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
     image: node:14
     commands:
       - cd Source/server
-      - npm run build
+      - npm build
 
   # testing server
   - name: server-test
