Add Build and Test server in CI 4

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ steps:
     image: node:14
     commands:
       - cd Source/server
+      - npm install
       - npm build
 
   # testing server
@@ -21,6 +22,7 @@ steps:
     image: node:14
     commands :
       - cd Source/server
+      - npm install
       - npm start
       - sleep 5 && curl -I localhost:3000
     depends_on: [ build ]
