--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
       - cd Source/server
       - npm install -f
       - npm start
-      - sleep 5 && curl -I localhost:3000
+      - sleep 1 && echo "ok" && curl -I localhost:3000
     depends_on: [ build ]
 
   # docker image build
