Try to return error

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,8 @@ steps:
       - npm install
       - npm start &
       - sleep 5
-      - curl -I localhost:3000
+      - curl http://localhost:3001
+      - [[ $? -eq 0 ]]
     depends_on: [ build ]
 
   # docker image build
