--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,8 @@ steps:
       - npm start &
       - sleep 5
       - curl http://localhost:3000
-      - test $? -eq 0
+      - if ((curl -s http://localhost:3000 | grep '<pre>Cannot GET /</pre>' == ""));then exit 1;fi
+
     depends_on: [ build ]
 
   # docker image build
