--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,9 @@ steps:
       - npm install
       - npm start &
       - sleep 5
-      - if ((curl -s http://localhost:3000 | grep '<pre>Cannot GET /</pre>' == ""));then exit 1;fi
+      - res=$(curl -s http://localhost:3000 | grep '<pre>Cannot GET /</pre>')
+      - echo res
+      - if (( res == ""));then exit 1;fi
 
     depends_on: [ build ]
 
