--- a/.drone.yml
+++ b/.drone.yml
@@ -26,8 +26,8 @@ steps:
       - npm start &
       - sleep 5
       - res=$(curl -s http://localhost:3000 | grep '<pre>Cannot GET /</pre>')
-      - echo res
-      - if (( res == ""));then exit 1;fi
+      - echo $res
+      - if (( $res == ""));then exit 1;fi
 
     depends_on: [ build ]
 
